@@ -1,4 +1,8 @@
-﻿drkns 29.04.2016 17:31:01 +0200 - build 4652
+﻿drkns 29.04.2016 19:13:57 +0200 - build 4653
+
+1. С форума: в текущей ночной при попытке запустить команду far из комстроки far он сам себя не находит.
+
+drkns 29.04.2016 17:31:01 +0200 - build 4652
 
 1. Продолжение 4646 - уберём ненужные блокировки окон.
 
